--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,22 @@ name = "narad"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "main"
+path = "src/bin/main.rs"
 
+[[bin]]
+name = "tcp_client"
+path = "src/bin/tcp_client.rs"
+
+[[bin]]
+name = "http_client"
+path = "src/bin/http_client.rs"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+reqwest = { version = "0.12.3", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+    "json",
+] }
